chart/templates/deployment-rust-bitcoin-indexer.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: deployment-rust-bitcoin-indexer
  labels:
    app: rust-bitcoin-indexer
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-bitcoin-indexer
  template:
    metadata:
      labels:
        app: rust-bitcoin-indexer
    spec:
      containers:
      - name: rust-bitcoin-indexer
        image: "319156457634.dkr.ecr.us-west-2.amazonaws.com/rust-bitcoin-indexer:latest"
        command: ["./target/release/rust-bitcoin-indexer"]
        args: ["--rpc-url", "http://service-rust-btc-full-node:8332", "--rpc-user", "S0M3ON3SPEC1EL", "--rpc-pass", "1q2w3QW!!!"]
        ports:
        - containerPort: 8082
