chart/templates/deployment-rust-indexer-timescaledb.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: deployment-rust-indexer-timescaledb
  labels:
    app: rust-indexer-timescaledb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-indexer-timescaledb
  template:
    metadata:
      labels:
        app: rust-indexer-timescaledb
    spec:
      containers:
      - image: "319156457634.dkr.ecr.us-west-2.amazonaws.com/rust-indexer-timescaledb:latest"
        name: rust-indexer-timescaledb
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: storage-rust-indexer-timescaledb
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: storage-rust-indexer-timescaledb
        persistentVolumeClaim:
          claimName: pvc-rust-indexer-timescaledb
