chart/templates/service-rust-bitcoin-indexer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rust-bitcoin-indexer
spec:
  selector:
    app: rust-bitcoin-indexer
  ports:
  - port: 8082
