chart/templates/service-rust-btc-full-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rust-btc-full-node
spec:
  selector:
    app: rust-btc-full-node
  ports:
  - port: 8332
  type: LoadBalancer
