chart/templates/service-rust-indexer-timescaledb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rust-indexer-timescaledb
spec:
  selector:
    app: rust-indexer-timescaledb
  ports:
  - port: 5432
  type: LoadBalancer
